tests/baselines/reference/copyrightWithoutNewLine1.errors.txt
tests/cases/compiler/copyrightWithoutNewLine1.ts(4,24): error TS2307: Cannot find module './greeter'.


==== tests/cases/compiler/copyrightWithoutNewLine1.ts (1 errors) ====
    /*****************************
    * (c) Copyright - Important
    ****************************/
    import model = require("./greeter")
                           ~~~~~~~~~~~
!!! error TS2307: Cannot find module './greeter'.
    var el = document.getElementById('content');
    var greeter = new model.Greeter(el);
    /** things */
    greeter.start();